Added "About Me"

--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@ https://templatemo.com/tm-560-astro-motion
           <div class="col-xs-12">
             <div class="cd-slider-nav">
               <nav class="navbar navbar-expand-lg" id="tm-nav">
-                <a class="navbar-brand" href="#">Yue (Sophy) Wu</a>
+                <a class="navbar-brand" href="#">Sophy Yue Wu</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-supported-content" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
                   <div class="collapse navbar-collapse" id="navbar-supported-content">
                     <ul class="navbar-nav mb-2 mb-lg-0">
                       <li class="nav-item selected">
-                        <a class="nav-link" aria-current="page" href="#0" data-no="1">Home</a>
+                        <a class="nav-link" aria-current="page" href="#0" data-no="1">About Me</a>
                         <div class="circle"></div>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#0" data-no="2">Me</a>
+                        <a class="nav-link" href="#0" data-no="2">Experience</a>
                         <div class="circle"></div>
                       </li>
                       <li class="nav-item">
@@ -47,11 +47,11 @@ https://templatemo.com/tm-560-astro-motion
                         <div class="circle"></div>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#0" data-no="4">Life</a>
+                        <a class="nav-link" href="#0" data-no="4">Alternate Life</a>
                         <div class="circle"></div>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#0" data-no="5">Other</a>
+                        <a class="nav-link" href="#0" data-no="5">Some Thoughts</a>
                         <div class="circle"></div>
                       </li>
                     </ul>
@@ -67,11 +67,11 @@ https://templatemo.com/tm-560-astro-motion
             <div class="page-width-1 page-left">
               <div class="d-flex position-relative tm-border-top tm-border-bottom intro-container">
                 <div class="intro-left tm-bg-dark">
-                  <h2 class="mb-4">Welcome to Sophy's Personal Website</h2>
+                  <h2 class="mb-4">Hi! Welcome to my personal website!</h2>
                   <p class="mb-4">
-                    My name is Sophy the Piglet. I'm currently a graduate student at the University of Texas at Austin.</p>
+                    I am a radar scientist with an Earth System Science background.</p>
                   <p class="mb-0">
-                    I'm also a big fan of JX3. </p>
+                    I am currently a PhD candidate at the University of Texas at Austin. I am expected to graduate by May 2023.</p>
                 </div>
                 <div class="intro-right">
                   <img src="img/home-img-1.jpg" alt="Image" class="img-fluid intro-img-1">
@@ -85,8 +85,22 @@ https://templatemo.com/tm-560-astro-motion
               <div class="d-flex position-relative tm-border-top tm-border-bottom intro-container">
                 <div class="tm-bg-dark content-pad">
                   <p class="mb-4">
-                    My name is Sophy the Piglet. I'm currently a graduate student at the University of Texas at Austin.
+                    My birth name is Wu Yue, pronounced as "wú yuè". It consists of two Chinese characters, 吴 (wú) and 越 (yuè). </p>
+                  <p class="mb-0">
+                    Wu is my surname, indicating we are an old and large family originating from 2700 BC. We officially became a family of "Wu" around 12 BC after our ancestors, Tai Bo and Zhong Yong, the first and second sons of the Zhou dynasty, decided to give up their rights to inherit the dynasty and moved to the Lower Reaches of the Yangtze River. 
                   </p>
+                  <p class="mb-0">
+                    Since then, our family has survived for thousands of years. Most of us still live near the Yangtze River in the Provinces of Jiangsu, Zhejiang, Anhui, and Shanghai. Nowadays, we are the ninth-largest family in China. In 2018, there were 27.8 million citizens living in Mainland China with a surface of Wu.
+                  </p>
+                  <p class="mb-0">
+                    My last name, Yue, is a last name that can be used by all genders and can serve as both an adverb and a verb. As an adverb, it means "better and better"; as a verb, it means "overcoming a barrier, go beyond". It bears my parent's wish that I am always becoming a better person.
+                  </p>
+                  <p class="mb-0">
+                    [Another interesting fact about my name is that 吴 and 越 are also the names of two neighboring countries from around 400 BC. They kept fighting against each other until 越 finally defeated 吴. Ironically, after so many battles, tears, and blood, people nowadays use the combination of the two countries' names, "吴越", to refer to the area they used to be located, which is roughly from the southern Jiangsu Province to Zhejiang Province. This is also why my name is popular in this area.]
+                  </p>
+                  <p class="mb-0">
+                    "Sophy" is an English nickname given by my first-grade English teacher, which I like very much and consider part of my name. My family members sometimes call me "Sophy" as well. Therefore, if you have difficulty pronouncing my Chinese name, you are welcome to call me "Sophy".
+                  </p> 
                 </div>
                 <div class="circle intro-circle-3"></div>
                 <div class="circle intro-circle-4"></div>
