--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@ https://templatemo.com/tm-560-astro-motion
               </div>
               <div class="d-flex position-relative tm-border-top tm-border-bottom intro-container">
                 <div class="tm-bg-dark content-pad">
+                  <h2 class="mb-4"> Facts about My Name</h2>
                   <p class="mb-4">
                     My birth name is Wu Yue, pronounced as "wú yuè". It consists of two Chinese characters, 吴 (wú) and 越 (yuè). </p>
                   <p class="mb-4">
@@ -94,9 +95,6 @@ https://templatemo.com/tm-560-astro-motion
                   </p>
                   <p class="mb-4">
                     My last name, Yue, is a last name that can be used by all genders and can serve as both an adverb and a verb. As an adverb, it means "better and better"; as a verb, it means "overcoming a barrier, go beyond". It bears my parent's wish that I am always becoming a better person.
-                  </p>
-                  <p class="mb-4">
-                    [Another interesting fact about my name is that 吴 and 越 are also the names of two neighboring countries from around 400 BC. They kept fighting against each other until 越 finally defeated 吴. Ironically, after so many battles, tears, and blood, people nowadays use the combination of the two countries' names, "吴越", to refer to the area they used to be located, which is roughly from the southern Jiangsu Province to Zhejiang Province. This is also why my name is popular in this area.]
                   </p>
                   <p class="mb-0">
                     "Sophy" is an English nickname given by my first-grade English teacher, which I like very much and consider part of my name. My family members sometimes call me "Sophy" as well. Therefore, if you have difficulty pronouncing my Chinese name, you are welcome to call me "Sophy".
@@ -117,9 +115,29 @@ https://templatemo.com/tm-560-astro-motion
             <div class="d-flex position-relative tm-border-top tm-border-bottom intro-container page-margin-1">
                   <!-- Add your stories and images here.-->
                   <div class="me-text tm-bg-dark">
-                    <h2 class="mb-4"> Random Paragraph 1</h2>
                     <p class="mb-4">
-                      I wake up and my chest feels heavy because there are breasts sticking out of it because I am a woman. I go into the bathroom to prepare myself for the day. This takes a considerable amount of time. I put on makeup to make my face look better, and then I comb my hair which is long because I am a woman and not a man with long hair. Then I look at myself in the mirror and I see a face staring back me with womanly cheekbones. This is my face. 
+                      I was born as the only child in my family in Nanjing, Jiangsu, China.
+                    </p>
+                    <p class="mb-4">
+                      Jiangsu is located on China's east coast. It is the most densely populated province in China. Although it occupies only 1.12% of the land, it is home to about 6% of China's population.
+                    </p>
+                    <p class="mb-4">
+                      When I was in primary school, I wanted to become a doctor so that I could recognize diseases by analyzing their symptoms. 
+                    </p>
+                    <p class="mb-4">
+                      In junior high, I plan to study archeology in the future because I love solving mysteries and recovering what happened a long time ago. However, I discovered that I am not very good at remembering historical facts and dates. 
+                    </p>
+                    <p class="mb-4">
+                      In senior high, I realized that I am actually interested in solving a problem by discovering and analyzing details. In the meantime, I started to develop an interest in understanding how the Earth works and in unraveling the mysteries of nature.
+                    </p>
+                    <p class="mb-4">
+                      I went to Hong Kong for my undergraduate study majoring in Earth System Science. It was like a dream come true. I was eager to learn all aspects of the Earth System, from the atmosphere to the lithosphere, and explore various research methods, from fieldwork to numerical modeling. I gradually developed an interest in geological and geophysical studies and took courses on earth surface processes, hydrology, and remote sensing.
+                    </p>
+                    <p class="mb-4">
+                      I joint Professor Lin Liu's research group in my third year. Under his supervision, I started to learn about and utilize Interferometry Synthetic Aperture Radar (InSAR) for my final year project. I explored the possibility of using InSAR to monitor land subsidence in urban areas, mainly from groundwater extraction. 
+                    </p>
+                    <p class="mb-0">
+                      I was astonished by the beauty of the fringes in interferograms. I was also surprised how remote sensing can monitor large-scale surface changes without extensive fieldwork. This was when I decided to learn more about InSAR and its applications, and the experience led me to where I am now.
                     </p>
                   </div>
                   <div class="me-img">
@@ -134,15 +152,6 @@ https://templatemo.com/tm-560-astro-motion
               <div class="me-img">
                 <img src="img/home-img-1.jpg" alt="Image" class="img-fluid intro-img-1">
               </div>
-              <!-- Add your stories and images here.-->
-              <div class="me-text tm-bg-dark">
-                <h2 class="mb-4">Random Paragraph 2</h2>
-                <p class="mb-4">
-                  She stared down the street towards the direction from where the bus usually came. It would be here any minute now. She pulled her phone out from her pocket and checked the time. She had been waiting for over twenty minutes. It was now a few minutes past 10 o’clock, and the bus wasn’t there yet. It was late. Buses were always late.
-                </p>
-              </div>
-              <div class="circle intro-circle-3"></div>
-              <div class="circle intro-circle-4"></div>
         </div>
           </li>
           <!-- <li data-page-no="5">
