Update texts and structure

--- a/index.html
+++ b/index.html
@@ -64,14 +64,16 @@ https://templatemo.com/tm-560-astro-motion
       <div class="container-fluid tm-content-container">
         <ul class="cd-hero-slider mb-0 py-5">
           <li class="px-3" data-page-no="1">
-            <div class="page-width-1 page-left">
-              <div class="d-flex position-relative tm-border-top tm-border-bottom intro-container">
+            <div class="page-left">
+              <div class="d-flex page-width-1 position-relative tm-border-top tm-border-bottom-noline intro-container">
                 <div class="intro-left tm-bg-dark">
                   <h2 class="mb-4">Hi! Welcome to my personal website</h2>
                   <p class="mb-4">
+                    I am Sophy Yue Wu.</p>
+                  <p class="mb-4">
                     I am a radar scientist with an Earth System Science background.</p>
                   <p class="mb-0">
-                    I am currently a PhD candidate at the University of Texas at Austin. I am expected to graduate by May 2023.</p>
+                    I am currently a PhD candidate at the University of Texas at Austin, expected to graduate by May 2023.</p>
                 </div>
                 <div class="intro-right">
                   <img src="img/home-img-1.jpg" alt="Image" class="img-fluid intro-img-1">
@@ -79,12 +81,20 @@ https://templatemo.com/tm-560-astro-motion
                 </div>
                 <div class="circle intro-circle-1"></div>
                 <div class="circle intro-circle-2"></div>
-                <div class="circle intro-circle-3"></div>
-                <div class="circle intro-circle-4"></div>
               </div>
-              <div class="d-flex position-relative tm-border-top tm-border-bottom intro-container">
-                <div class="tm-bg-dark content-pad">
-                  <h2 class="mb-4"> Facts about My Name</h2>
+              <div class="blog-item page-width-1">
+                <div class="blog-title-wrapper">
+                  <div class="blog-title">
+                    Facts about My Name
+                  </div>
+                  <div class="blog-more">
+                    More
+                  </div>
+                  <div class="blog-less blog-hidden">
+                    Less
+                  </div>
+                </div>
+                <div class="blog-content blog-hidden">
                   <p class="mb-4">
                     My birth name is Wu Yue, pronounced as "wú yuè". It consists of two Chinese characters, 吴 (wú) and 越 (yuè). </p>
                   <p class="mb-4">
@@ -96,12 +106,13 @@ https://templatemo.com/tm-560-astro-motion
                   <p class="mb-4">
                     My last name, Yue, is a last name that can be used by all genders and can serve as both an adverb and a verb. As an adverb, it means "better and better"; as a verb, it means "overcoming a barrier, go beyond". It bears my parent's wish that I am always becoming a better person.
                   </p>
+                  <p class="mb-4">
+                    Another interesting fact about my name is that 吴 and 越 are also the names of two neighboring countries from around 400 BC. They kept fighting against each other until 越 finally defeated 吴. Ironically, after so many battles, tears, and blood, people nowadays use the combination of the two countries' names, "吴越", to refer to the area they used to be located, which is roughly from the southern Jiangsu Province to Zhejiang Province. This is also why my name is popular in this area.
+                  </p>
                   <p class="mb-0">
                     "Sophy" is an English nickname given by my first-grade English teacher, which I like very much and consider part of my name. My family members sometimes call me "Sophy" as well. Therefore, if you have difficulty pronouncing my Chinese name, you are welcome to call me "Sophy".
-                  </p> 
+                  </p>
                 </div>
-                <div class="circle intro-circle-3"></div>
-                <div class="circle intro-circle-4"></div>
               </div>
               <!-- <div class="text-center">
                 <a href="#0" data-page-no="2" class="btn btn-primary tm-intro-btn tm-page-link">
@@ -112,7 +123,7 @@ https://templatemo.com/tm-560-astro-motion
           </li>
           <!-- Me -->
           <li data-page-no="2" class="px-3">
-            <div class="d-flex position-relative tm-border-top tm-border-bottom intro-container page-margin-1">
+            <div class="d-flex position-relative tm-border-top tm-border-bottom-noline intro-container page-margin-1">
                   <!-- Add your stories and images here.-->
                   <div class="me-text tm-bg-dark">
                     <p class="mb-4">
@@ -127,10 +138,8 @@ https://templatemo.com/tm-560-astro-motion
                   </div>
                   <div class="circle intro-circle-1"></div>
                   <div class="circle intro-circle-2"></div>
-                  <div class="circle intro-circle-3"></div>
-                  <div class="circle intro-circle-4"></div>
             </div>
-            <div class="d-flex position-relative tm-border-top tm-border-bottom intro-container page-margin-1">
+            <div class="d-flex position-relative tm-border-top-noline tm-border-bottom-noline intro-container page-margin-1">
               <!-- Add your stories and images here.-->
               <div class="me-text tm-bg-dark">
                 <p class="mb-4">
@@ -139,19 +148,15 @@ https://templatemo.com/tm-560-astro-motion
                 <p class="mb-4">
                   In junior high, I plan to study archeology in the future because I love solving mysteries and recovering what happened a long time ago. However, I discovered that I am not very good at remembering historical facts and dates. 
                 </p>
-                <p class="mb-4">
+                <p class="mb-0">
                   In senior high, I realized that I am actually interested in solving a problem by discovering and analyzing details. In the meantime, I started to develop an interest in understanding how the Earth works and in unraveling the mysteries of nature.
                 </p>
               </div>
               <div class="me-img">
                 <img src="img/home-img-1.jpg" alt="Image" class="img-fluid intro-img-1">
               </div>
-              <div class="circle intro-circle-1"></div>
-              <div class="circle intro-circle-2"></div>
-              <div class="circle intro-circle-3"></div>
-              <div class="circle intro-circle-4"></div>
         </div>
-        <div class="d-flex position-relative tm-border-top tm-border-bottom intro-container page-margin-1">
+        <div class="d-flex position-relative tm-border-top-noline tm-border-bottom intro-container page-margin-1">
           <!-- Add your stories and images here.-->
           <div class="me-text tm-bg-dark">
             <p class="mb-4">
@@ -167,8 +172,6 @@ https://templatemo.com/tm-560-astro-motion
           <div class="me-img">
             <img src="img/home-img-1.jpg" alt="Image" class="img-fluid intro-img-1">
           </div>
-          <div class="circle intro-circle-1"></div>
-          <div class="circle intro-circle-2"></div>
           <div class="circle intro-circle-3"></div>
           <div class="circle intro-circle-4"></div>
     </div>
@@ -263,13 +266,28 @@ https://templatemo.com/tm-560-astro-motion
             </div>
           </li> -->
           <li data-page-no="3" class="px-3">
-            <div class="d-flex position-relative tm-border-top tm-border-bottom intro-container">
+            <div class="d-flex position-relative tm-border-top tm-border-bottom-noline intro-container page-margin-1">
               <div class="tm-bg-dark content-pad">
+                <h2 class="mb-4">Research Interests</h2>
                 <p class="mb-4">
                   I am a radar scientist with an Earth System Science background. I use remote sensing techniques to study natural and anthropogenic earth surface processes that trigger large-scale surface deformation, such as water and oil exploitation, permafrost dynamics, earthquakes, landslides, and volcano activities.
                 </p>
                 <p class="mb-0">
-                  In particular, my interest lies in using the space-borne Interferometric Synthetic Aperture Radar (InSAR) to contribute to a better understanding of Earth's surface processes.
+                  In particular, my interest lies in using the space-borne Interferometric Synthetic Aperture Radar (InSAR) to contribute to a better understanding of Earth's surface processes, including:
+                </p> 
+                <p class="mb-0">
+                  - Integrate InSAR results with other near-surface geophysical measurements to produce regional estimates.
+                </p> 
+                <p class="mb-0">
+                  - Improve InSAR data processing strategies so that the InSAR community can also be part of the open science. By that time, researchers who know little about InSAR processing strategies can also access freely-available, automatically-generated, high-coherence InSAR-observed results.
+                </p> 
+              </div>
+            </div>
+            <div class="d-flex position-relative tm-border-top tm-border-bottom intro-container page-margin-1">
+              <div class="tm-bg-dark content-pad">
+                <h2 class="mb-4">Field Experience</h2>
+                <p class="mb-0">
+                  My current work in the permafrost region requires regularly visiting our field sites in Alaska. Check here for details of my field experience.
                 </p> 
               </div>
             </div>
@@ -277,7 +295,7 @@ https://templatemo.com/tm-560-astro-motion
               <div class="research-container left">
                 <!-- Add your research images and description-->
                 <div class="research-img left">
-                  <img src="img/test.png" alt="Image" class="img-fluid">
+                  <img src="img/seasonaldef_bg.png" alt="Image" class="img-fluid">
                 </div>
                 <div class="research-text left">
                   <h2 class="research-text-title">Permafrost Surface Deformation</h2>
@@ -290,21 +308,22 @@ https://templatemo.com/tm-560-astro-motion
                 Related Publications:
               </h2>
               <div>
-                ...
+                <p class="mb-4">
+                  Wu, Y., J. Chen, M. O'Connor, S. Ferencz, M. Cardenas and G. Kling (manuscript in preparation). The uncertainty in InSAR-based active layer soil water storage estimates over the Arctic Foothills.
+                </p>
+                <p class="mb-4">
+                  Chen, J., Y. Wu, M. O'Connor, M. Cardenas, K. Schaefer, R. Michaelides and G. Kling (2020). Active layer freeze-thaw and water storage dynamics in permafrost environments inferred from InSAR. Remote Sensing of Environment, 248, 112007. doi: 10.1016/j.rse.2020.112007.
+                </p>
               </div>
-              <div class="circle intro-circle-1"></div>
-              <div class="circle intro-circle-2"></div>
-              <div class="circle intro-circle-3"></div>
-              <div class="circle intro-circle-4"></div>
             </div>
             <div class="research-container-wrapper right">
               <div class="research-container right">
                 <!-- Add your research images and description-->
                 <div class="research-img right">
-                  <img src="img/test.png" alt="Image" class="img-fluid">
+                  <img src="img/watermap_bg.png" alt="Image" class="img-fluid">
                 </div>
                 <div class="research-text right">
-                  <h2 class="research-text-title">Regional Soil Water and Organic Carbon Estimation</h2>
+                  <h2 class="research-text-title">Regional Soil Water and Organic Matter Estimation</h2>
                   <div class="research-text-main">
                     InSAR-observed surface deformation can also be combined with other datasets, such as soil surface temperature, land vegetation types, soil moisture, soil organic content, and soil bulk density, to further estimate regional soil water and soil organic matter storage in permafrost region.
                   </div> 
@@ -314,34 +333,27 @@ https://templatemo.com/tm-560-astro-motion
                 Related Publications:
               </h2>
               <div>
-                ...
-              </div>
-            </div>
-            <div class="d-flex position-relative tm-border-top tm-border-bottom intro-container">
-              <div class="tm-bg-dark content-pad">
-                <h2 class="mb-4"> Future Research Plan</h2>
                 <p class="mb-4">
-                  I am fascinated by how InSAR can be applied to interdisciplinary studies and produce regional estimates without extensive fieldwork. This is especially critical for permafrost studies as this region is known to be remoted and hard to access.
+                  Wu, Y., J. Chen, M. O'Connor, G. Kling and M. Cardenas (in revision). Substantial stocks of seasonally-thawed soil organic carbon may determine near-term responses of the Arctic to climate change.
                 </p>
-                <p class="mb-0">
-                  Here are some of my research objectives for the next few years:
-                </p> 
-                <p class="mb-0">
-                  - I plan to continue InSAR studies in the permafrost region.
-                </p> 
-                <p class="mb-0">
-                  - Meanwhile, I plan to gain experience using InSAR to study other Earth surface processes.
-                </p> 
-                <p class="mb-0">
-                  - I want to learn more about other remote sensing techniques and explore the possibility of integrating the results with InSAR observations.
-                </p> 
-                <p class="mb-0">
-                  - I want to improve InSAR data processing strategies so that the InSAR community can also be part of the open science. By that time, researchers who know little about InSAR processing strategies can also access freely-available, automatically-generated, high-coherence InSAR-observed results.
-                </p> 
+                <p class="mb-4">
+                  O'Connor, M. T., M. B. Cardenas, S. B. Ferencz, Y. Wu, B. T. Neilson, J. Chen and G. W. Kling (2020). Empirical Models for Predicting Water and Heat Flow Properties of Permafrost Soils. Geophysical Research Letters, 47(11). doi:10.1029/2020gl087646
+                </p>
               </div>
-              <div class="circle intro-circle-3"></div>
-              <div class="circle intro-circle-4"></div>
             </div>
+            <!-- <div class="research-container-wrapper left">
+              <div class="research-container left">
+                <div class="research-img left">
+                  <img src="img/seasonaldef_bg.png" alt="Image" class="img-fluid">
+                </div>
+                <div class="research-text left">
+                  <h2 class="research-text-title">City Subsidence and Groundwater Extraction</h2>
+                  <div class="research-text-main">
+                    This work is part of my Final Year Project at the Chinese University of Honk Kong. I investigated the feasibility of building a hydrogeological model to better explain the relationship between city subsidence and underground water extraction.
+                  </div> 
+                </div>
+              </div>
+            </div> -->
           </li>
           <li data-page-no="4">
             <div class="d-flex position-relative tm-border-top tm-border-bottom intro-container page-margin-1">
@@ -400,6 +412,9 @@ https://templatemo.com/tm-560-astro-motion
                   - Paper star with wishes
                 </p> 
               </div>
+              <div class="me-img">
+                <img src="img/home-img-1.jpg" alt="Image" class="img-fluid intro-img-1">
+              </div>
               <div class="circle intro-circle-3"></div>
               <div class="circle intro-circle-4"></div>
             </div>  
@@ -420,54 +435,6 @@ https://templatemo.com/tm-560-astro-motion
                 </div>
                 <div class="blog-content blog-hidden">
                   <p>No random generated paragraph, please.</p>
-                </div>
-              </div>
-              <div class="blog-item">
-                <div class="blog-title-wrapper">
-                  <div class="blog-title">
-                    What??
-                  </div>
-                  <div class="blog-more">
-                    More
-                  </div>
-                  <div class="blog-less blog-hidden">
-                    Less
-                  </div>
-                </div>
-                <div class="blog-content blog-hidden">
-                  <p>No random generated paragraph, please.</p> 
-                </div>
-              </div>
-              <div class="blog-item">
-                <div class="blog-title-wrapper">
-                  <div class="blog-title">
-                    What???
-                  </div>
-                  <div class="blog-more">
-                    More
-                  </div>
-                  <div class="blog-less blog-hidden">
-                    Less
-                  </div>
-                </div>
-                <div class="blog-content blog-hidden">
-                  <p>No random generated paragraph, please.</p> 
-                </div>
-              </div>
-              <div class="blog-item">
-                <div class="blog-title-wrapper">
-                  <div class="blog-title">
-                    What????
-                  </div>
-                  <div class="blog-more">
-                    More
-                  </div>
-                  <div class="blog-less blog-hidden">
-                    Less
-                  </div>
-                </div>
-                <div class="blog-content blog-hidden">
-                  <p>No random generated paragraph, please.</p>  
                 </div>
               </div>
             </div>
